@@ -1,5 +1,6 @@
 package com.kiryu1223.baseDao.ExpressionV2;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,9 +24,12 @@ public interface IExpression
 
     public static <T> NewExpression<T> New(Class<T> target, IExpression... expressions)
     {
-        return new NewExpression<T>(target, List.of(expressions));
+        return new NewExpression<T>(target,new ArrayList<>(Arrays.asList(expressions)));
     }
-
+    public static <T> NewExpression<T> New(T t, IExpression... expressions)
+    {
+        return new NewExpression<T>((Class<T>) t.getClass(), new ArrayList<>(Arrays.asList(expressions)));
+    }
     public static MappingExpression mapping(String source, IExpression value)
     {
         return new MappingExpression(source, value);
@@ -33,7 +37,7 @@ public interface IExpression
 
     public static MappingsExpression mappings(MappingExpression... mappingExpressions)
     {
-        return new MappingsExpression(List.of(mappingExpressions));
+        return new MappingsExpression(new ArrayList<>(Arrays.asList(mappingExpressions)));
     }
 
     public static DbFuncExpression dbFunc(DbFuncType funcType, IExpression expression)
@@ -53,7 +57,7 @@ public interface IExpression
 
     public static MethodCallExpression methodCall(IExpression selector, String selected, IExpression... params)
     {
-        return new MethodCallExpression(selector, selected, List.of(params));
+        return new MethodCallExpression(selector, selected, new ArrayList<>(Arrays.asList(params)));
     }
 
     public static ReferenceExpression reference(Object t)
